--- a/src/scss/home-02.scss
+++ b/src/scss/home-02.scss
@@ -1,3 +1,27 @@
 //====================================================================================================
 
 //====================================================================================================
+.proba {
+   // .proba__title
+   &__title {
+      font-weight: 700;
+      font-size: rem(48);
+      @include adaptiveValue("font-size", 48, 36);
+      line-height: 120.833333%; /* 58/48 */
+      color: #0fa2db;
+      text-transform: uppercase;
+      text-align: center;
+      padding: 0 rem(15);
+      &:before {
+         @extend %ic;
+         display: block;
+         color: red;
+         font-size: rem(65);
+      }
+   }
+}
+
+// ._icon-berdle {
+//    color: red;
+//    font-size: rem(65);
+// }
