--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -16,7 +16,7 @@
 
 // Підключення іконкових шрифтів ==============================================================================================================================================================================================================================================================================
 // Підключити, якщо є файл іконкового шрифту
-//@import "fonts/icons";
+@import "fonts/icons";
 
 // ============================================================================================================================================================================================================================================================================================================================================================================================
 // Налаштування шаблону ============================================================================================================================================================================================================================================================================================================================================================================================
@@ -154,7 +154,9 @@ body {
 @import "header-01";
 @import "header-02";
 @import "header-03";
-@import "footer";
+@import "footer-01";
+@import "footer-02";
+@import "footer-03";
 
 // Підключення стилів окремих сторінок
 @import "home-01";
