--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -33,3 +33,24 @@
       background: #0c85b5;
    }
 }
+/* ==================== */
+
+.btn-03 {
+   display: inline-block;
+   font-weight: 700;
+   @include adaptiveValue("font-size", 32, 24);
+   line-height: 118.75%; /* 38/32 */
+   color: #fff;
+   // padding: rem(30) 0 rem(32) 0;
+   @include adaptiveValue("padding-top", 30, 15);
+   @include adaptiveValue("padding-bottom", 32, 15);
+   @include adaptiveValue("padding-left", 70, 30);
+   @include adaptiveValue("padding-right", 70, 30);
+   background: radial-gradient(81.69% 566.4% at 24.1% 18.31%, rgba(255, 240, 240, 0.8) 0%, rgba(255, 255, 255, 0) 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */, #FF5050;
+   border-radius: 30px;
+   transition: background 0.3s ease;
+   &:hover {
+      background: radial-gradient(81.69% 566.4% at 24.1% 18.31%, rgba(255, 240, 240, 0.1) 0%, rgba(255, 255, 255, 0) 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */, #FF5050;
+
+   }
+}
