--- a/src/scss/home-01.scss
+++ b/src/scss/home-01.scss
@@ -305,7 +305,7 @@
          flex: 0 1 28%;
       }
    }
-   // .sevices__item
+   // .card__item
    &__item {
       height: 100%; // чтобы карточки были одной высоты независимо от количества текста
       display: flex;
