--- a/src/scss/home-03.scss
+++ b/src/scss/home-03.scss
@@ -1,11 +1,182 @@
+.page {
+   // .page__why-use-03
+   &__why-use-03 {
+   }
+}
+
 //====================================================================================================
+//========================================================================================================================================================
+
+.why-use-03 {
+   @include adaptiveValue("padding-top", 56, 40);
+   @include adaptiveValue("padding-bottom", 116, 40);
+   background: radial-gradient(30.61% 191.95% at 3.76% 67.69%, rgba(145, 87, 139, 0.2) 0%, rgba(0, 0, 0, 0) 100%)
+         /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */,
+      #09080e;
+   // .why-use-03__container
+   &__container {
+   }
+   // .why-use-03__inner
+   &__inner {
+      max-width: rem(950);
+      margin: 0 auto;
+
+      margin-bottom: rem(80);
+   }
+   // .why-use-03__title
+   &__title {
+      &:not(:last-child) {
+         margin-bottom: rem(19);
+      }
+   }
+   // .why-use-03__desc
+   &__desc {
+      font-weight: 400;
+      font-size: rem(20);
+      @include adaptiveValue("font-size", 20, 16);
+      line-height: 115%; /* 23/20 */
+      text-align: left;
+   }
+   // .why-use-03__content
+   &__content {
+   }
+   // .why-use-03__row
+   &__row {
+      display: flex;
+      flex-wrap: wrap;
+      margin: 0 rem(-10);
+      // @include adaptiveValue("column-gap", 100, -50);
+      column-gap: rem(70);
+      gap: rem(70);
+      // justify-content: space-between;
+      justify-content: center;  
+      text-align: center;
+      @media (max-width:$tablet){
+         justify-content: center;  
+      }
+   }
+   // .why-use-03__column
+   &__column {
+      flex: 0 1 25%;
+      max-width: rem(212);
+      // background: #435a43;
+      padding: 0 rem(10);
+      // justify-content: center;
+      text-align: center;
+      @media (max-width:$tablet){
+         flex: 0 1 50%;
+      }
+      @media (max-width:$mobileSmall){
+         flex: 0 1 100%;
+         width: 100%;  
+      }
+   }
+   // .why-use-03__card
+   &__card {
+      position: relative;
+      // justify-content: center;
+   }
+   // .why-use-03__image
+   &__image {
+      position: absolute;
+      top: -2%;
+      left: 50%;
+      transform: translate(-50%, -52%);
+      // position: relative;
+      display: flex;
+      display: inline-block;
+      width: rem(79);
+      height: rem(79);
+      border-radius: 50%;
+      background: #2b5f40;
+      align-items: center;
+      justify-content: center;
+      padding: rem(20);
+      &::after {
+         content: "";
+         position: absolute;
+         top: 50%;
+         left: 50%;
+         transform: translate(-50%, -50%);
+         border-radius: 50%;
+         width: rem(123);
+         height: rem(123);
+         filter: blur(7.5px);
+         z-index: 3;
+      }
+      &::before {
+         // content: "";
+         // position: absolute;
+         // width: rem(123);
+         // height: rem(62);
+         // background: #669c61;
+         // top: -100%;
+         // left: 50%;
+         // transform: translate(-50%, 100%);
+         // z-index: 2;
+      }
+      img {
+         width: rem(40);
+         height: rem(40);
+      }
+      &_01 {
+         background: linear-gradient(134.78deg, rgba(255, 255, 255, 0.3) 11.39%, rgba(104, 255, 228, 0.3) 92.72%),
+            #68ffe4;
+         &::after {
+            background: rgba(104, 255, 228, 0.3);
+         }
+      }
+      &_02 {
+         background: linear-gradient(134.78deg, rgba(255, 255, 255, 0.3) 11.39%, rgba(255, 173, 77, 0.3) 92.72%),
+            #ffad4d;
+         &::after {
+            background: rgba(255, 173, 77, 0.3);
+         }
+      }
+      &_03 {
+         background: linear-gradient(134.78deg, rgba(255, 255, 255, 0.3) 11.39%, rgba(189, 255, 0, 0.3) 92.72%), #d3ff56;
+         &::after {
+            background: rgba(211, 255, 86, 0.3);
+         }
+      }
+      &_04 {
+         background: linear-gradient(134.78deg, rgba(255, 255, 255, 0.3) 11.39%, rgba(92, 157, 255, 0.3) 92.72%),
+            #5c9dff;
+         &::after {
+            background: rgba(92, 157, 255, 0.3);
+         }
+      }
+   }
+   // .why-use-03__square
+   &__square {
+      // background: rgba(255, 255, 255, 0.5);
+      // opacity: 0.05;
+      // backdrop-filter: blur(rem(5));
+      /* Note: backdrop-filter has minimal browser support */
+      border-radius: 20px;
+      border: rem(3) solid #ffffff;
+      border-radius: rem(20);
+   }
+   // .why-use-03__text
+   &__text {
+      font-weight: 700;
+      font-size: rem(16);
+      @include adaptiveValue("font-size", 16, 12);
+      line-height: 118.75%; /* 19/16 */
+      text-transform: uppercase;
+      padding-top: rem(123);
+      padding-bottom: rem(36);
+   }
+}
 
 //====================================================================================================
 //========================================================================================================================================================
 .features-03 {
    @include adaptiveValue("padding-top", 36, 30);
    @include adaptiveValue("padding-bottom", 118, 50);
-   background: radial-gradient(30.61% 191.95% at 3.76% 67.69%, rgba(145, 87, 139, 0.2) 0%, rgba(0, 0, 0, 0) 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */, #232323;
+   background: radial-gradient(30.61% 191.95% at 3.76% 67.69%, rgba(145, 87, 139, 0.2) 0%, rgba(0, 0, 0, 0) 100%)
+         /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */,
+      #232323;
    // .features__container
    &__container {
       // display: flex;
@@ -31,7 +202,7 @@
 .card-03 {
    // .card__row
    &__row {
-      display: flex;      
+      display: flex;
       justify-content: space-between;
       @include adaptiveValue("column-gap", 20, 5);
       @media (max-width: $mobile) {
@@ -72,12 +243,12 @@
          flex-direction: column-reverse;
          justify-content: end;
          padding-bottom: 0;
-         @media (max-width:$mobile){
-            flex-direction: column;   
+         @media (max-width: $mobile) {
+            flex-direction: column;
          }
       }
-      @media (max-width:$mobile){
-         padding-bottom: 0;  
+      @media (max-width: $mobile) {
+         padding-bottom: 0;
       }
    }
    // .card__image
