--- a/src/scss/home-02.scss
+++ b/src/scss/home-02.scss
@@ -1,3 +1,10 @@
+.page {
+   // .page__steps
+   &__steps {
+   }
+}
+
+//========================================================================================================================================================
 //====================================================================================================
 .features-02 {
    @include adaptiveValue("padding-top", 61, 30);
@@ -69,7 +76,7 @@
    // .sevices__icon
    &__icon {
       @include adaptiveValue("width", 80, 40);
-      @include adaptiveValue("height", 80, 40);      
+      @include adaptiveValue("height", 80, 40);
       display: flex;
       img {
          width: 100%;
@@ -87,9 +94,94 @@
 }
 //====================================================================================================
 //========================================================================================================================================================
+.steps-02 {
+   @include adaptiveValue("padding-top", 52, 30);
+   @include adaptiveValue("padding-bottom", 64, 30);
+   background: #f5f5f5;
+   // .steps-02__container
+   &__container {
+   }
+   // .steps-02__inner
+   &__inner {
+      max-width: rem(1155);
+      text-align: center;
+      margin: 0 auto;
+   }
+   // .steps-02__title
+   &__title {
+      font-weight: 700;
+      @include adaptiveValue("font-size", 40, 36);
+      color: #000;
+      text-transform: uppercase;
+      line-height: 117.5%; /* 47/40 */
+      &:not(:last-child) {
+         @include adaptiveValue("margin-bottom", 51, 25);
+      }
+   }
+   // .steps-02__image
+   &__image {
+      max-width: 100%;
+      img {
+         width: 100%;
+         height: 100%;
+      }
+      &:not(:last-child) {
+         @include adaptiveValue("margin-bottom", 29, 20);
+      }
+   }
+   // .steps-02__subtitle
+   &__subtitle {
+      font-weight: 600;
+      @include adaptiveValue("font-size", 24, 20);
+      line-height: 116.666667%; /* 28/24 */
+      color: #000;
+      text-transform: uppercase;
+      &:not(:last-child) {
+         @include adaptiveValue("margin-bottom", 27, 20);
+      }
+   }
+   // .steps-02__buttons
+   &__buttons {
+      display: flex;
+      justify-content: space-between;
+      gap: rem(20);
+      @media (max-width:$tablet){
+         justify-content: space-between;
+      }
+      @media (max-width: $mobile) {
+         flex-wrap: wrap;
+         justify-content: center;
+      }
+   }
+   // .steps-02__btn-02
+   &__btn-02 {
+      display: inline-block;
+      font-family: "Roboto";
+      @include adaptiveValue("font-size", 24, 20);
+      line-height: 116.666667%; /* 28/24 */
+      color: #fff;
+      @include adaptiveValue("padding-top", 37, 15);
+      @include adaptiveValue("padding-bottom", 37, 15);
+      max-width: rem(357);
+      width: 100%;
+      transition: background 0.3s ease;
+      background: #535353;
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+      &:hover {
+         background: #2e2e2e;
+      }
+      @media (max-width: $mobile) {
+         flex: 0 1 47%; 
+         max-width: 100%;        
+      }
+      @media (max-width: $mobileSmall) {
+         flex: 0 1 100%; 
+         max-width: 100%;        
+      }
+   }
+}
 
-
-
+//========================================================================================================================================================
 //========================================================================================================================================================
 .protection-02 {
    @include adaptiveValue("padding-top", 57, 30);
